[gd_scene load_steps=9 format=3 uid="uid://cf2ifm4k70avn"]

[ext_resource type="Script" path="res://scripts/user_interfaces_scripts/game_options.gd" id="1_3ijke"]
[ext_resource type="StyleBox" uid="uid://dtovomh45r1r8" path="res://resources/panel_style/blue_translucent_panel.tres" id="2_1g56o"]
[ext_resource type="StyleBox" uid="uid://bw214osv4w074" path="res://resources/button_style/dark_blue_button_normal.tres" id="2_8w77s"]
[ext_resource type="StyleBox" uid="uid://dn4ooi3iuri7g" path="res://resources/button_style/dark_blue_button_hover.tres" id="3_83rrm"]
[ext_resource type="StyleBox" uid="uid://skv4yoww86p0" path="res://resources/button_style/dark_blue_button_pressed.tres" id="4_j43hc"]
[ext_resource type="StyleBox" uid="uid://dmdgq5u21gfpl" path="res://resources/button_style/dark_blue_button_focus.tres" id="5_lugp5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k1jdv"]
border_width_left = 4
border_width_top = 2
border_width_right = 4
border_width_bottom = 2
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6dtb0"]
bg_color = Color(0.564706, 0.564706, 0.882353, 0.501961)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="GameOptions" type="CanvasLayer"]
script = ExtResource("1_3ijke")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsMargin" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -51.0
offset_top = -231.0
offset_right = 51.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 32

[node name="Panel" type="Panel" parent="Control/OptionsMargin"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_1g56o")

[node name="MarginContainer" type="MarginContainer" parent="Control/OptionsMargin"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Control/OptionsMargin/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Characters" type="Button" parent="Control/OptionsMargin/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("2_8w77s")
theme_override_styles/hover = ExtResource("3_83rrm")
theme_override_styles/pressed = ExtResource("4_j43hc")
theme_override_styles/focus = ExtResource("5_lugp5")
text = "Characters"

[node name="HoloNexus" type="Button" parent="Control/OptionsMargin/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("2_8w77s")
theme_override_styles/hover = ExtResource("3_83rrm")
theme_override_styles/pressed = ExtResource("4_j43hc")
theme_override_styles/focus = ExtResource("5_lugp5")
text = "HoloNexus
"

[node name="Inventory" type="Button" parent="Control/OptionsMargin/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("2_8w77s")
theme_override_styles/hover = ExtResource("3_83rrm")
theme_override_styles/pressed = ExtResource("4_j43hc")
theme_override_styles/focus = ExtResource("5_lugp5")
text = "Inventory
"

[node name="Settings" type="Button" parent="Control/OptionsMargin/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
focus_mode = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("2_8w77s")
theme_override_styles/hover = ExtResource("3_83rrm")
theme_override_styles/pressed = ExtResource("4_j43hc")
theme_override_styles/focus = ExtResource("5_lugp5")
text = "Settings"

[node name="SettingsMargin" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 96
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 96
theme_override_constants/margin_bottom = 64

[node name="Panel" type="Panel" parent="Control/SettingsMargin"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_1g56o")

[node name="MarginContainer" type="MarginContainer" parent="Control/SettingsMargin"]
layout_mode = 2
theme_override_constants/margin_top = 48
theme_override_constants/margin_bottom = 48

[node name="MarginContainer" type="MarginContainer" parent="Control/SettingsMargin/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_right = 48

[node name="GridContainer" type="GridContainer" parent="Control/SettingsMargin/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 256
columns = 2

[node name="FullScreenLabel" type="Label" parent="Control/SettingsMargin/MarginContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Full Screen"

[node name="FullScreenCheckButton" type="CheckButton" parent="Control/SettingsMargin/MarginContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ScreenResolutionLabel" type="Label" parent="Control/SettingsMargin/MarginContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Screen Resolution"

[node name="ScreenResolutionOptionButton" type="OptionButton" parent="Control/SettingsMargin/MarginContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = ExtResource("5_lugp5")
theme_override_styles/normal = ExtResource("2_8w77s")
theme_override_styles/hover = ExtResource("3_83rrm")
theme_override_styles/pressed = ExtResource("4_j43hc")
theme_override_styles/normal_mirrored = ExtResource("2_8w77s")
theme_override_styles/hover_mirrored = ExtResource("3_83rrm")
theme_override_styles/pressed_mirrored = ExtResource("4_j43hc")
alignment = 1

[node name="MasterVolumeLabel" type="Label" parent="Control/SettingsMargin/MarginContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Master Volume"

[node name="MasterVolumeHSlider" type="HSlider" parent="Control/SettingsMargin/MarginContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
max_value = 1.0
step = 0.001
value = 1.0

[node name="MusicVolumeLabel" type="Label" parent="Control/SettingsMargin/MarginContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Music Volume"

[node name="MusicVolumeHSlider" type="HSlider" parent="Control/SettingsMargin/MarginContainer/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_styles/slider = SubResource("StyleBoxFlat_k1jdv")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_6dtb0")
max_value = 1.0
step = 0.001
value = 1.0

[connection signal="pressed" from="Control/OptionsMargin/MarginContainer/VBoxContainer/Characters" to="." method="_on_characters_pressed"]
[connection signal="pressed" from="Control/OptionsMargin/MarginContainer/VBoxContainer/HoloNexus" to="." method="_on_holo_nexus_pressed"]
[connection signal="pressed" from="Control/OptionsMargin/MarginContainer/VBoxContainer/Inventory" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="Control/OptionsMargin/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="toggled" from="Control/SettingsMargin/MarginContainer/MarginContainer/GridContainer/FullScreenCheckButton" to="." method="_on_full_screen_check_button_toggled"]
[connection signal="item_selected" from="Control/SettingsMargin/MarginContainer/MarginContainer/GridContainer/ScreenResolutionOptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="value_changed" from="Control/SettingsMargin/MarginContainer/MarginContainer/GridContainer/MasterVolumeHSlider" to="." method="_on_master_volume_h_slider_value_changed"]
[connection signal="value_changed" from="Control/SettingsMargin/MarginContainer/MarginContainer/GridContainer/MusicVolumeHSlider" to="." method="_on_music_volume_h_slider_value_changed"]
